# football-stat-scraper

./: .gitignore  README.md  fff.py  file1.txt  file2.txt  file3.txt  file4.txt  keys1.txt  pyproject.toml  time_track.csv
foot_stat_scraper/: champ_urls.txt  country_urls.txt  db_manager.py  events_urls_parse.py  events_urls_parser.py  flashscore_stat_parser.py  foot_stat_orm.py  fs_live_stat_parser.py  fs_past_stat_parser.py  ng_stat_parse.py  ng_stat_parser.py
foot_stat_scraper/logs/: loggers.py  settings.py  test_log.py
stat_scraper/: db_manager.py  events_urls_parser.py  fs_live_stat_parser.py  fs_past_stat_parser.py  init_driver.py  mail_sender.py  ng_stat_parser.py  utils.py
stat_scraper/logs/: loggers.py  settings.py
stat_scraper/scripts/: fs_foot_stat_server#1.csv  fs_foot_stat_{SERVER_NAME}.csv  scraper.py
stat_scraper/urls/: detect_duplicate.py  events_urls.txt  failed_urls.txt
tests/: 10proc_result.txt  10thread_result.txt  expected_values.py  past_stat_smoke_test.py  results.py  speed_run_test.py  test_foot_stat_scraper.py  test_fs_live_parser.py  test_fs_past_parser.py  time_track.csv  time_track_url.csv
tests/multipoc_result/: 100urls_html0.5_click_1_1.txt  10proc_result.txt  10thread_result.txt  12proc_result.txt  12thread_repeat_result.txt  12thread_result.txt  14proc_result.txt  14thread_result.txt  18proc_result.txt  18thread_result.txt  6proc_result.txt  8proc_result.txt  singlethread_result.txt
tests/results/: 10thread_repeat_result.txt  16proc_result.txt  16thread_result.txt  4proc_result.txt  4thread_result.txt  6thread_result.txt  (+3 more)
(+2 files in other folders)
